# EnumHelper

./: CMakeLists.txt  LICENSE  README.md
examples/: EnumIterator.cpp  EnumIteratorCout.cpp  EnumIteratorWithMacro.cpp  EnumIteratorWithoutMacroMagic.cpp
include/: EnumHelper.h  EnumHelperWithMacro.h
